WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180571
[WinCairo] DumpRenderTree times out for all non-http tests
https://bugs.webkit.org/show_bug.cgi?id=180571
Summary
[WinCairo] DumpRenderTree times out for all non-http tests
Fujii Hironori
Reported
2017-12-07 21:00:42 PST
[WinCairo] DumpRenderTree times out for all non-http tests On the other hand, http tests works fine. I don't which revision is the culprit.
Attachments
bug fix
(2.23 KB, patch)
2017-12-09 23:03 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-12-07 21:10:44 PST
WinCairo MiniBrowser can't load file://..., too.
Ross Kirsling
Comment 2
2017-12-08 10:44:10 PST
(In reply to Fujii Hironori from
comment #1
)
> WinCairo MiniBrowser can't load file://..., too.
I wonder if this relates to Web Inspector not loading too then...
Basuke Suzuki
Comment 3
2017-12-08 10:56:46 PST
(In reply to Fujii Hironori from
comment #1
)
> WinCairo MiniBrowser can't load file://..., too.
I'm preparing the patch for this issue. Sorry for inconvenience.
Basuke Suzuki
Comment 4
2017-12-09 23:03:25 PST
Created
attachment 328930
[details]
bug fix Fix file protocol handling bug on curl. This fixes DumpRenderTree issue.
WebKit Commit Bot
Comment 5
2017-12-11 09:39:01 PST
Comment on
attachment 328930
[details]
bug fix Clearing flags on attachment: 328930 Committed
r225743
: <
https://trac.webkit.org/changeset/225743
>
WebKit Commit Bot
Comment 6
2017-12-11 09:39:02 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-12-11 09:40:24 PST
<
rdar://problem/35969229
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug