[WinCairo] DumpRenderTree times out for all non-http tests https://bugs.webkit.org/show_bug.cgi?id=180571

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2017-12-11
Reviewed by Alex Christensen.

Bug fix on processing the curl event for file protocol.

No new tests. This fix is to run existing tests.

* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::completeDidReceiveResponse):
* platform/network/curl/CurlRequest.h:
(WebCore::CurlRequest::isCompleted const):
(WebCore::CurlRequest::isCancelled const):
(WebCore::CurlRequest::isCompletedOrCancelled const):

Canonical link: https://commits.webkit.org/196559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225743 268f45cc-cd09-0410-ab3c-d52691b4dbfc